--- a/styles/style.css
+++ b/styles/style.css
@@ -720,6 +720,7 @@ body * {
     line-height: 25px;
     text-transform: uppercase;
     color: #FFFFFF;
+    display: flex;
 }
 .page7{
     max-width: 1440px;
